# curriculum-os

./: .gitignore  README.md  start.sh
backend/: Dockerfile  apprunner.yaml  pyproject.toml  run_server.py  setup-form.md  setup-guide.md  setup-questionnaire.md  system-instructions.md
backend/data/: curricula.json  users.json
backend/rostr-hub/: agent.yaml
backend/rostr-hub/context/: domain-knowledge.md  identity.md  user-context.md
backend/rostr-hub/knowledge-base/: ragdal.config.yaml
backend/rostr-hub/state/: decisions.md  learnings.jsonl
backend/rostr-hub/tools/: tool-manifest.yaml
backend/skill/: SKILL.md
backend/src/curriculum_agent/: __init__.py  __main__.py  config.py  deepseek_client.py  main.py  models.py
backend/src/curriculum_agent/api/: auth.py  curriculum_store.py  dependencies.py  routes.py  schemas.py
backend/src/curriculum_agent/curriculum/: adapters.py  generator.py  lesson_planner.py
backend/src/curriculum_agent/index/: master_index.py  serializers.py
backend/src/curriculum_agent/npao/: allocator.py  orchestrator.py  scorer.py
backend/src/curriculum_agent/pal/: compiler.py  templates.py
backend/src/curriculum_agent/ragdal/: knowledge_base.py  pipeline.py  tiers.py
backend/src/curriculum_agent/research/: engine.py  extractors.py  sources.py
backend/standalone/: agent.yaml  system-instructions.md
backend/tests/: test_curriculum.py  test_index.py  test_pal.py  test_ragdal.py  test_research.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  (+1 more)
(+26 files in other folders)
